# jupyter-fs

./: .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  azure-pipelines.yml  changelog.md  conftest.py  install.json  jest.config.js  lerna.json  package.json  pyproject.toml  release.py  requirements-lint.txt  requirements.txt  setup.cfg  setup.py  tsconfig.json  tsconfig.test.json  tslint.json
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: binder-on-pr.yaml  binder-on-pr.yml  build.yaml  build.yml
binder/: environment.yml  postBuild  start
ci/: browser_check.sh  docker-compose.yml  enable_os_share_windows.ps1  enable_sharing_mac.sh  generate_jupyter_config.sh  install_docker_desktop_mac.sh  s3_local.sh  start_docker_desktop_mac.sh  start_smb_os_windows.ps1  stop_smb_os_windows.ps1
ci/mac/: add_etc_hosts.sh  enable_sharing.sh
ci/win/: create_os_share_windows.ps1
dev/: pyfilesystem_miniofs.ipynb  pyfilesystem_s3fs.ipynb  requirements.txt
docs/: Makefile  api.md  conf.py  make.bat
docs/src/: api.md
examples/: pyfilesystem_miniofs.ipynb  pyfilesystem_s3fs.ipynb
js/: .eslintrc.js  babel.config.js  eslint.config.js  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.eslint.json  tsconfig.json  tsconfig.test.json
js/schema/: plugin.json
js/src/: auth.tsx  clipboard.ts  commands.ts  contents_proxy.ts  contents_utils.ts  drag.ts  filesystem.ts  filetree.ts  icons.ts  index.ts  index.tsx  progress.tsx  resources.tsx  settings.ts  snippets.ts  snippets.tsx  svg.d.ts  tokens.ts  treefinder.ts  upload.ts  utils.ts
js/src/extension/: jupyterfs.json
js/src/extension/jupyter_server_config.d/: jupyterfs.json
js/style/: auth.css  filetree.css  index.css  index.js  snippets.css  treefinder.css
js/tests/: activate.test.ts  assetsTransformer.js  commands.test.js  export.test.ts  fileMock.js  jest-setup.js  open-html.tests.ts  settings.test.ts  setup.js  snippets.test.ts  styleMock.js
jupyter-config/: jupyterfs.json  metacontents.json
jupyter-config/jupyter_notebook_config.d/: jupyterfs.json  multicontentsmanager.json
jupyterfs/: __init__.py  _version.py  auth.py  browser-test.js  browser_check.py  chrome-test.js  config.py  extension.py  fs_wrapper.py  fsmanager.py  meta_contents_manager.py  metamanager.py  pathutils.py  pyfilesystem_manager.py  snippets.py
jupyterfs/contents_managers/: absolute.py
jupyterfs/extension/: jupyter_server_config.json
jupyterfs/manager/: __init__.py  checkpoints.py  common.py  fs.py  fsspec.py
jupyterfs/tests/: __init__.py  conftest.py  test_auth.py  test_extension.py  test_fs_wrapper.py  test_fsmanager.py  test_init.py  test_metamanager.py  test_pyfilesystem_manager.py
jupyterfs/tests/utils/: client.py  s3.py  samba.py  smb.conf  smb.conf.template  smb.py
multicontentsmanager/: __init__.py  _version.py  absolute.py  extension.py  handlers.py  meta_contents_manager.py  metacontentsmanager.py  pathutils.py  pyfilesystem_manager.py
multicontentsmanager/tests/: test_extension.py  test_handlers.py  test_init.py
schema/: plugin.json
src/: filesystem.ts  filetree.ts  icons.ts  index.ts  svg.d.ts  upload.ts  utils.ts
src/schema/: plugin.json
style/: index.css
test/: export.test.ts
tests/: activate.test.ts  test_all.py  test_extension.py
tests/browser_check/: chrome-test.js
