[build-system]
requires = [
    "hatchling",
    "hatch-jupyter-builder",
    "jupyterlab>=4,<5",
]
build-backend="hatchling.build"

[project]
name = "jupyter-fs"
authors = [{name = "the jupyter-fs authors", email = "t.paine154@gmail.com"}]
description = "A Filesystem-like mult-contents manager backend for Jupyter"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "1.1.0"
requires-python = ">=3.9"
keywords = [
    "Jupyter",
    "JupyterLab",
    "Extensions",
    "IPython",
    "Filesystem",
    "Tree",
    "Filetree",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "jupyterlab>=4,<5",
    "jupyter_server>=2,<3",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "hatch-jupyter-builder",
    "hatchling",
    "jupyterlab>=4,<5",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-jupyter[server]",
    "pytest-sugar",
    "pytest-xdist",
    "ruff>=0.9,<0.12",
    "twine",
    "wheel",
    # tests
    "boto3",
    "fs-miniofs",
    "pysmb",
    # fs
    "fs>=2.4.11",
    "fs-s3fs>=1.1.1",
    "fs.smbfs>=0.6.3",
    # fsspec
    "fsspec>=2023.6.0",
    "s3fs>=2024",
    "smbprotocol",
]
fs = [
    "fs>=2.4.11",
    "fs-s3fs>=1.1.1",
    "fs.smbfs>=0.6.3",
]
fsspec = [
    "fsspec>=2023.6.0",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/jpmorganchase/jupyter-fs"
Homepage = "https://github.com/jpmorganchase/jupyter-fs"

[tool.bumpversion]
current_version = "1.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "jupyterfs/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "js/package.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yml",
    "js/pnpm-lock.yaml",
    "js/tsconfig.tsbuildinfo",
    "Makefile",
    "README.md",
    ".vscode/**/*",
    "binder/**/*",
    "ci/**/*",
    "docs/**/*",
    "examples/**/*",
    "js/dist/**/*",
    "js/lib/**/*",
    "jupyterfs/extension/**",
    "jupyterfs/labextension/**",
    "jupyterfs/nbextension/**",
]

[tool.coverage.run]
branch = true
omit = [
    "jupyterfs/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "jupyterfs/nbextension",
    "jupyterfs/labextension",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["jupyterfs", "js"]
exclude = [
    "/js/dist",
    "/js/node_modules",
]

[tool.hatch.build.targets.wheel]
packages = ["jupyterfs"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterfs/labextension" = "share/jupyter/labextensions/jupyter-fs"
"jupyterfs/labextension/schemas/jupyter-fs/plugin.json" = "share/jupyter/lab/schemas/jupyter-fs/plugin.json"
"jupyterfs/extension/install.json" = "share/jupyter/labextensions/jupyter-fs/install.json"
"jupyterfs/extension/jupyter_server_config.d/jupyterfs.json" = "etc/jupyter/jupyter_server_config.d/jupyterfs.json"

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterfs/labextension/package.json",
]
skip-if-exists = [
    "jupyterfs/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = "pnpm"

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
asyncio_mode = "strict"
testpaths = "jupyterfs/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["jupyterfs"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
