[bdist_wheel]
universal=1

[flake8]
# ref: https://flake8.pycqa.org/en/2.5.5/warnings.html#error-codes
# E302: "expected 2 blank lines, found 0"
extend-ignore=E302
max-line-length=200

[manifix]
known-excludes =
    .git*
    .git/**/*
    .travis.yml
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    package-lock.json
    lib
    build
    dist
    Untitled*.ipynb

[metadata]
description_file = README.md

# config for autopep8
[pycodestyle]
# autopep8 doesn't seem to know about extend-ignore
ignore=E302
max-line-length=200

[tool:pytest]
junit_family=xunit2
