[bdist_wheel]
universal=1

[flake8]
# ref: https://flake8.pycqa.org/en/2.5.5/warnings.html#error-codes
# E302: "expected 2 blank lines, found 0"
extend-ignore=E302
max-line-length=200

[manifix]
known-excludes =
    .git*
    .git/**/*
    .travis.yml
    **/node_modules/**/*
    **/__py_cache__/**/*
    **/*.pyc
    package-lock.json
    lib
    build
    dist
    Untitled*.ipynb

[metadata]
description_file = README.md

# config for autopep8
[pycodestyle]
# autopep8 doesn't seem to know about extend-ignore
ignore=E302
max-line-length=200

[tool:pytest]
junit_family=xunit2

[bumpversion]
current_version = 0.3.1final0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final
values = 
	alpha
	rc
	final

[bumpversion:part:build]

[bumpversion:file:jupyterfs/_version.py]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:docs/conf.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"
serialize = 
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
