[bumpversion]
current_version = 0.4.0alpha0
commit = True
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}{release}{build}
	{major}.{minor}.{patch}

[bdist_wheel]
universal = 1

[flake8]
extend-ignore = E302
max-line-length = 200

[manifix]
known-excludes = 
	.git*
	.git/**/*
	.travis.yml
	**/node_modules/**/*
	**/__py_cache__/**/*
	**/*.pyc
	package-lock.json
	lib
	build
	dist
	Untitled*.ipynb

[metadata]
description_file = README.md

[pycodestyle]
ignore = E302
max-line-length = 200

[tool:pytest]
junit_family = xunit2

[bumpversion:part:release]
optional_value = final
values = 
	alpha
	rc
	final

[bumpversion:part:build]

[bumpversion:file:jupyterfs/_version.py]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:docs/conf.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:js/package.json]
search = "version": "{current_version}"
replace = "version": "{new_version}"
serialize = 
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
